<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_cleaningType"
            android:icon="@drawable/ic_cleaning_type"
            android:title="@string/CleaningPackages" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/explore_hot_rooms_icon"
            android:title="@string/title_order" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/user" />
    </group>

    <item android:title="Action">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
