<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layoutNoInternet"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:visibility="gone"
    >
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/ic_cloud_off_black_24dp"
        android:contentDescription="@string/app_name"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_internet"
        android:gravity="center_horizontal"
        android:layout_margin="6dp"/>

    <TextView
        android:id="@+id/tvTryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        android:textAllCaps="false"
        android:background="@drawable/bg_btn_no_internet"
        android:padding="5dp"/>
</LinearLayout>