<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="12dp"
        app:contentPaddingTop="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:layout_marginBottom="12dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilFirstName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_input_field"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/titFirstName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="FirstName"
                            android:inputType="text"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="1dp"
                        android:layout_weight="0.2"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilLastName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_input_field"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/titLastName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="LastName"
                            android:inputType="text"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_input_field"
                    android:layout_marginBottom="4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/titEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_email_black_24dp"
                        android:drawableLeft="@drawable/ic_email_black_24dp"
                        android:drawablePadding="8dp"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_input_field"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/titPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                        android:drawablePadding="8dp"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginRight="18dp"
                    android:background="@drawable/bg_button"
                    android:fontFamily="sans-serif"
                    android:text="@string/signUp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <ProgressBar
                    android:id="@+id/pbRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginRight="18dp"
                    android:visibility="gone"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">

                    <TextView
                        android:id="@+id/tvAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account" />

                    <TextView
                        android:id="@+id/tvLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_toEndOf="@+id/tvAccount"
                        android:layout_toRightOf="@+id/tvAccount"
                        android:maxLines="1"
                        android:text="@string/login_now"
                        android:textColor="@color/green"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="OR" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <View
                        android:layout_width="15dp"
                        android:layout_height="3dp"
                        android:background="@drawable/line" />


                    <TextView
                        android:id="@+id/tvCreateGuest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/go_with_guest_account"
                        android:textColor="@color/darkYellow"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>


</RelativeLayout>